[package]
name = "qiskit-circuit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "qiskit_circuit"
doctest = false

[dependencies]
ahash = "0.8.11"
hashbrown.workspace = true
rustworkx-core = "0.14.2"

[dependencies.pyo3]
workspace = true
features = ["hashbrown", "indexmap", "num-complex", "num-bigint", "smallvec"]

[dependencies.indexmap]
workspace = true
features = ["rayon"]
